--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <img src="assets/docsy_blue.png" alt="Docsy Logo" height="300">
     </div>
     <div class="slack-button">
-        <a href="https://slack.com/oauth/v2/authorize?state=753263f4-c035-4f50-ad86-c49aceb8b8b4&client_id=6308370768692.6305823198707&scope=channels:read,channels:history,chat:write&user_scope=">
-            <img alt="Add to Slack" height="40" width="139" src="https://platform.slack-edge.com/img/add_to_slack.png" srcset="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x">
+        <a href="https://slack.com/oauth/v2/authorize?client_id=6308370768692.6305823198707&scope=channels:read,reactions:read,app_mentions:read,chat:write,channels:history&user_scope=">
+            <img alt="Add to Slack" height="40" width="139" src="https://platform.slack-edge.com/img/add_to_slack.png" srcSet="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x" />
         </a>
     </div>
 </body>
