--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <img src="assets/docsy_blue.png" alt="Docsy Logo" height="300">
     </div>
     <div class="slack-button">
-        <a href="hhttps://app.getdocsy.com/slack/install">
+        <a href="https://app.getdocsy.com/slack/install">
             <img alt="Add to Slack" height="40" width="139" src="https://platform.slack-edge.com/img/add_to_slack.png" srcSet="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x" />
         </a>
     </div>
